# PieJam

./: README.md
AndroidClient/app/: build.gradle  proguard-rules.pro
AndroidClient/app/src/androidTest/java/com/piejam/androidclient/: ExampleInstrumentedTest.java
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/com/piejam/androidclient/: AndroidToPie.java  MainActivity.java  PieJamSocketHandler.java  PieToAndroid.java
AndroidClient/app/src/main/res/layout/: activity_main.xml  content_main.xml
AndroidClient/app/src/main/res/menu/: menu_main.xml
AndroidClient/app/src/main/res/values/: strings.xml
AndroidClient/app/src/test/java/com/piejam/androidclient/: ExampleUnitTest.java
AndroidClient/gradle/wrapper/: gradle-wrapper.properties
PieClient/: CMakeLists.txt
PieClient/src/: main.cpp
PieServer/: CMakeLists.txt
PieServer/src/: GfxRenderer.cpp  GfxRenderer.hpp  NetworkHandler.cpp  NetworkHandler.hpp  Planet.cpp  Planet.hpp  Star.cpp  Star.hpp  Util.hpp  main.cpp
